# violetminer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
scripts/: prep-aarch64.sh  win-install.bat
src/: CMakeLists.txt
src/ArgonVariants/: Argon2Hash.cpp  Argon2Hash.h  CMakeLists.txt  Variants.h
src/Config/: Constants.h
src/Miner/: CMakeLists.txt  GetConfig.cpp  GetConfig.h  main.cpp
src/MinerManager/: CMakeLists.txt  HashManager.cpp  HashManager.h  MinerManager.cpp  MinerManager.h
src/PoolCommunication/: CMakeLists.txt  PoolCommunication.cpp  PoolCommunication.h
src/Types/: CMakeLists.txt  HashingAlgorithm.h  IHashingAlgorithm.h  Pool.h  PoolMessage.cpp  PoolMessage.h
src/Utilities/: CMakeLists.txt  ColouredMsg.h  Console.cpp  Console.h  Input.cpp  Input.h  String.cpp  String.h  Utilities.cpp  Utilities.h
src/miner/: CMakeLists.txt  main.cpp
